traces/bug_775.txt
src/femlib/Mesh3dn.cpp:1592: error: DEAD_STORE
  The value written to &nomove (type _Bool) is never used.
Showing all 1 steps of the trace


src/femlib/Mesh3dn.cpp:1592:9: Write of unused value
1590.           // corrected by F.H 23 juin 2015
1591.           bool ddd=verbosity>2000;
1592.           bool nomove=true;
                ^
1593.           R lambda[4],dl[4],cl[4];
1594.           Phat.toBary(lambda);
